# SR04T

./: .gitmodules  CMakeLists.txt  README.md  build.sh  config-doxygen.conf  project.yml  run_doxygen.sh  run_formatter.sh  run_tests.sh
include/: sr04m.h  sr04t.h  sr04t_lib.h
scripts/: start_gdb.sh  start_openocd.sh
src/: sr04m.c  sr04t.c  sr04t_appl.c  sr04t_lib.c
test/: test_sr04m.c
utils/: startup.c
